# composition-analyzer

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/analysis/: mod.rs  rule_of_thirds.rs
