[package]
name = "composition-analyzer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "composition-analyzer"
path = "src/main.rs"


[dependencies]
image = "0.25"
imageproc = "0.25"
ndarray = "0.16"
nalgebra = "0.33"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"